--- a/miniProject/3-post/postStyle.css
+++ b/miniProject/3-post/postStyle.css
@@ -10,7 +10,7 @@
 }
 
 #container {
-    width: 1000px;
+    width: 1200px;
     height: 100%;
     margin: auto;
     padding-top: 20px;
@@ -33,7 +33,7 @@
 }
 
 #comments {
-    width: 1000px;
+    width: 100%;
     height: 700px;
     padding: 20px;
     border: 2px solid palevioletred;
